# cimir

./: Cargo.toml  README.md
src/: animation.rs  appbar.rs  application.rs  color.rs  font.rs  key.rs  main.rs  renderer.rs  shaders.rs  vertex.rs
src/primitives/: label.rs  mod.rs  textinput.rs
src/styling/: mod.rs  padding.rs
