[package]
name = "cimir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.19"
freetype-rs = "0.28.0"
glium = "0.30.0"
image = "0.23.14"
rand = "0.8.4"
winit = "0.25.0"
